V.NEXT
----------
- [PATCH] Update version for org.json:json to 20230227 (#2022)
- [MAJOR] Move Broker encryption logic to broker code. Some more refactoring. (#2016)
- [PATCH] Fix Error Type thrown for NO_ACCOUNT_FOUND (#2006)
- [MINOR] Separate constants for max client and broker protocol versions (#2008)
- [PATCH] Pulling device cert issuer check to beginning of OnReceivedClientCertRequest (#2010)
- [MINOR] Add method to clear receiver concurrentHashMap in LocalBroadcaster (#1993)
- [PATCH] Mapping ECDSA to EC in ClientCertRequest's keyTypes array (#2015)
- [PATCH] Fix NPE in OTEL code (#2018)
- [MINOR] Updating different smartcards error message; updated string res files (#2021)
- [PATCH] Moving ClearCertPref call to clean up method (#2025)
- [PATCH] Fix target in token records to fix cache keys (#2027)

V.11.0.0
----------
- [MINOR] Add CommandDispatcher methods to stop and reset silent request executor. (#2000)
- [MINOR] Support CIAM Authority Type (#1992)
- [PATCH] Send AT on KEY_AUTHTOKEN for ADAL Acquire token silently with Broker (#1996)
- [PATCH] Expose Cached Credential Service request ID in tokenResponse (#1991)
- [MINOR] Adding YubiKit remove method back in; bumping YubiKit Versions (#1994)
- [PATCH] Make changes for jetpack datastore broker support (#1986)
- [PATCH] Getting rid of account manager strategy in MSAL/OneAuth (#1988)
- [MINOR] Add JWT Claims to MicrosoftStsTokenRequest to support PRT v3 (#1969)
- [MAJOR] Some improvements to Open Id Provider Configuration Client (#1990)
- [PATCH] Revert 'Write back read successes to cache and stop extra lookups in getAll (#1927)' (#1997)
- [MINOR] Optional support for in-memory cache of all credentials and accountrecords (#1929)
- [MINOR] Changes to support MSA accounts in Broker (#2003)

V.10.1.1
----------
- [PATCH] V10.1.0 was incorrectly built with RC versions, need to increment to V10.1.1
- [MINOR] Add dialogs to prompt user to remove smartcard within CBA flow (#1966)